# PyQASP

./: .gitattributes  README.md  clean-install.bash  example.qasp  parser.spec  pipiline-martin.txt  program.lp  pyqasp.spec  pyqaspiclp.spec  setup.py  test.qasp  test.qcir
DLV2-master/: .gitignore  CMakeLists.txt  Makefile  Makefile_cross_comp  README.md  tmp.lp  tmp.lparse
DLV2-master/release/: dlv2-2.0.0-linux-x86_64
DLV2-master/src/: main.cpp
DLV2-master/src/common/: Assert.h  DLV2Facade.cpp  DLV2Facade.h  ErrorMessage.h  Help.h  Options.cpp  Options.h  Trace.h  Utility.h
DLV2-master/src/idlv/: main.cpp
DLV2-master/src/idlv/directives/: DBConnection.cpp  DBConnection.h  DBDirective.h  Directive.h  DirectiveFactory.h  DirectivesHolder.cpp  DirectivesHolder.h  ExportDirective.h  ExtPredConversionDirective.cpp  ExtPredConversionDirective.h  ImportDirective.h  Query.h  ShowDirective.cpp  ShowDirective.h  SparqlConnection.cpp  SparqlConnection.h  SparqlDirective.h
DLV2-master/src/idlv/grounder/atom/: AggregateAtom.cpp  (+20 more)
DLV2-master/src/idlv/input/: Buffer.cpp  Buffer.h  EmptyInputBuilder.h  ExtAtomFactory.cpp  ExtAtomFactory.h  InMemoryInputBuilder.cpp  InMemoryInputBuilder.h  InputBuilder.h  InputDirector.cpp  InputDirector.h  ParserConstraint.h  ParserConstraintAspCore2Strict.h  PrinterInputBuilder.cpp  PrinterInputBuilder.h  SelectorBuilder.cpp  SelectorBuilder.h  aspcore2.l  aspcore2.y  aspcore2_lexer.hpp  aspcore2_parser.h  aspcore2_parser.hpp
DLV2-master/src/idlv/subsumption/: RuleHashBuilder.h  SubsumptionChecker.cpp  SubsumptionChecker.h
DLV2-master/src/idlv/util/: Constants.h  Equation.h  Graph.cpp  Graph.h  InteractiveStats.cpp  InteractiveStats.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  VecStack.h  WarningMessage.h
DLV2-master/src/wasp/: CautiousReasoning.cpp  CautiousReasoning.h  Clause.cpp  Clause.h  Enumeration.cpp  GUSData.h  Learning.cpp  Literal.cpp  Literal.h  ParacoherentSemantics.cpp  ParacoherentSemantics.h  PredicateMinimization.cpp  PredicateMinimization.h  ReasonForBinaryClauses.cpp  Restart.h  Satelite.cpp  Satelite.h  Solver.cpp  Solver.h  Variables.h  WaspConfiguration.cpp  WaspConfiguration.h  WaspCreator.h  WaspFacade.cpp  WaspFacade.h  WaspOutput.h  main.cc
DLV2-master/src/wasp/heuristic/: ExternalHeuristic.cpp  MinisatHeuristic.cpp  MinisatHeuristic.h
DLV2-master/src/wasp/interpreters/: MyPythonInterpreter.cpp
DLV2-master/src/wasp/preasp/: Aggregate.cpp  Aggregate.h  AtomData.h  BinaryConstraint.cpp  BinaryConstraint.h  Builder.cpp  Builder.h  Completion.cpp  Completion.h  DependencyGraph.cpp  DependencyGraph.h  Interpretation.h  Literal.h  MinimizeConstraint.cpp  MinimizeConstraint.h  Options.h  ParseUtils.h  Parser.cpp  Parser.h  Program.h  Rule.cpp  Rule.h  RuleData.h  Simplifications.cpp  Simplifications.h  Trie.h  Type.h
DLV2-master/src/wasp/propagators/: Aggregate.cpp  Aggregate.h  Component.cpp  Component.h  DisjunctionPropagator.h  ExternalPropagator.cpp  ExternalPropagator.h  HCComponent.cpp  HCComponent.h  MultiAggregate.cpp  MultiAggregate.h  ReductBasedCheck.cpp  ReductBasedCheck.h  UnfoundedBasedCheck.cpp  UnfoundedBasedCheck.h
DLV2-master/src/wasp/stl/: Heap.h  HeapLiterals.h  Trie.h
DLV2-master/src/wasp/util/: ExtendedStatistics.h  Statistics.h  VariableNames.h  WaspConstants.h
DLV2-master/src/wasp/weakconstraints/: AbstractWeakStrategy.cpp  AbstractWeakStrategy.h  CoreBased.cpp  CoreBased.h  K.cpp  K.h  One.cpp  One.h  Opt.cpp  Opt.h  PMRes.cpp  PMRes.h  WeakFacade.h
DLV2-master/tests/: README  allAnswerSets.checker.py  input  reduce_ground_instances.sh  text.report.py  weakConstraints.checker.py
DLV2-master/tests/asp/gringo/: choice.002.test.py  choice.003.test.py  choice.004.test.py  choice.005.test.py  choice.006.test.py  choice.007.test.py  choice.008.test.py
DLV2-master/tests/asp/idlvBasicTests/: 3col.test.py  3colc.test.py  3coln.test.py  3colv.test.py  ASP0.test.py  ASP10.test.py  ASP10_noComment.test.py  ASP11.test.py  ASP12.test.py  ASP12_noComment.test.py  ASP13.test.py  ASP14-noweak.test.py  ASP15.test.py  ASP15_noComment.test.py  ASP16.test.py  ASP17.test.py  ASP19.test.py  ASP2-noweak.test.py  ASP20.test.py  ASP21.test.py  ASP22.test.py  ASP3.test.py  ASP4.test.py  ASP5.test.py  ASP5_noComment.test.py  ASP6.test.py  ASP6_noComment.test.py  ASP7-noweak.test.py  ASP9.test.py  Connected-Maximum-choice.asp.2-still_live-3-1.asp.test.py  Connected-Maximum-choice.asp.3-still_live-4-1.asp.test.py  Graceful-graphs-choice.asp.cut1.test.py  Permutation-pattern-choice.asp.cut1.test.py  Solitaire-choice.asp.cut1.test.py  abd_network.test.py  abd_stratcomp.test.py  aggregate.builtin1.test.py  aggregate.builtin2.test.py  aggregate.builtin3.test.py  aggregate.builtin5.test.py  (+647 more)
DLV2-master/tests/asp/idlvExternalLiterals/: external.0.test.py  external.1.test.py  external.10.test.py  external.11.test.py  external.12.test.py  external.13.test.py  external.14.test.py  external.15.test.py  external.16.test.py  external.17.test.py  external.18.test.py  external.19.test.py  external.2.test.py  external.20.test.py  external.21.test.py  external.22.test.py  external.23.test.py  external.24.test.py  external.25.test.py  external.26.test.py  external.28.test.py  external.29.test.py  external.3.test.py  external.30.test.py  external.31.test.py  external.32.test.py  external.33.test.py  external.34.test.py  external.35.test.py  external.36.test.py  external.37.test.py  external.38.test.py  external.39.test.py  external.4.test.py  external.40.test.py  external.41.test.py  external.42.test.py  external.43.test.py  external.44.test.py  external.45.test.py  (+13 more)
DLV2-master/tests/asp/idlvSyntacticTests/: aggregates.assignment.4.test.py  aggregates.conjunction.1.test.py  aggregates.count.assignment.22.test.py  aggregates.count.assignment.24.test.py  aggregates.count.assignment.4.test.py  aggregates.standardization.1.test.py  aggregates.vars.1.test.py  annotations.3.test.py  annotations.8.test.py  annotations.9.test.py  annotations.ASP16.test.py  builtIn.1.test.py  builtins.4.test.py  constants.2.test.py  constants.20.test.py
(+279 files in other folders)
